concord_examples/tests/ui/route_placeholder_decl_removed.rs
use concord_macros::api;

api! {
    client UiRoutePlaceholderRemoved {
        scheme: https,
        host: "example.com",
    }

    GET One(id: String) -> Json<()> {
        path["x", {id: String}]
    }
}

fn main() {}
